Corrections style + adaptation mobile

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,12 +1,48 @@
-th{
+table{
+    display: flex;
     width: 100%;
-    border: 1px solid;
-    color:black;
-    background-color: orange;
+    flex-direction: column;
+    border-radius: 10px;
+    border-collapse: separate;
+    overflow: hidden;
+    border: 1px solid gray;
 }
 
-td {
-    border: 1px solid;
+tr {
+    display: flex;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    transition: background-color 0.3s;
+}
+
+tr:hover {
+    background-color: rgb(219, 219, 162);
+}
+
+th {
+    width: 100%;
+    height: 30px;
+    text-align: center;
+    align-items: center; 
+    justify-content: center;
+    background-color: orange;
+    transition: background-color 0.3s;
+}
+
+th:hover {
+    background-color: rgb(176, 145, 87);
+}
+
+.tache{
+    display: flex;
+    width: 80%;
+}
+
+.spe{
+    display: flex;
+    width: 10%;  
+    justify-content: center; 
 }
 
 .supprimer{
@@ -18,6 +54,21 @@ td {
     text-align:center;
 }
 
-h1, h2, h3, h4, h5, h6{
-    font-family:Noto Sans, sans-serif ;
+h1, h2, h3, h4, h5, h6 {
+    font-family: Poppins-Regular;
+    color: #666;
+}
+
+p, tbody {
+    font-family: Poppins-Regular;
+    color: #666;
+    font-size: 15px;
+}
+
+@media only screen and (max-width: 600px) {
+
+    .table{width: 70%}
+    .spe{width: 15%}
+    .supprimer{font-size: 7px;}
+
 }
